fix paints caption wrong position

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1080,7 +1080,7 @@ ul:last-child {
         max-height: 33em;
     }
     .paints .caption {
-        top: 100%;
+        top: 0%;
         text-align: right;
     }
     /* L'homme, la nature et la technologie */
